Fix alignment of form boxes and no-results markup

--- a/mtp_cashbook/assets-src/stylesheets/views/_history.scss
+++ b/mtp_cashbook/assets-src/stylesheets/views/_history.scss
@@ -6,20 +6,19 @@ form.HistorySearch {
 
   .date-fields {
     display: inline-block;
-    vertical-align: top;
     background-color: $panel-colour;
-    padding: 0 1em .8em .7em;
+    padding: .5em 1em .5em .6em;
     .date-start, .date-end {
       display:inline-block;
-      width: 5.7em;
-      margin-left: 0.5em;
+      width: 6.7em;
+      padding-left: .5em;
     }
+    input { width: 100% }
   }
 
   .search-field {
-    vertical-align: top;
     display: inline-block;
-    margin: 0 1.5em .8em 0;
+    margin-right: 1em;
     input { width: 100% }
   }
 
